--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
         h1 {
             color: #ffffff;
         }
-        label {
-            font-size: 16px;
-        }
         input[type="text"] {
             width: 75%;
             padding: 10px;
@@ -185,8 +182,7 @@
 <body>
     <div class="container">
         <h1>Radar Viewer</h1>
-        <label for="radarName">Enter Radar Name:</label>
-        <input type="text" id="radarName" name="radarName">
+        <input type="text" id="radarName" name="radarName" placeholder="Enter Radar ID">
         <br>
         <button onclick="openRadar('reflectivity')">Open Reflectivity</button>
         <button onclick="openRadar('velocity')">Open Velocity</button>
