--- a/index.html
+++ b/index.html
@@ -5,67 +5,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radar Viewer</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-    <link rel="icon" href="./Tree.png">
+    <link rel="icon" href="https://raw.githubusercontent.com/microsoft/fluentui-emoji/refs/heads/main/assets/Deciduous%20tree/3D/deciduous_tree_3d.png">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #1e1e1e;
+            background-color: #121212;
             color: #ffffff;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
+            text-align: center;
+            justify-content: flex-start;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
+            user-select: none;
         }
-        .container {
-            background-color: #2d2d2d;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        .title-container {
             text-align: center;
+            padding: 40px;
+            background-color: #1e1e1e;
+            font-size: 28px;
+            font-weight: bold;
             width: 100%;
-            max-width: 400px;
+            box-sizing: border-box;
         }
-        h1 {
-            color: #ffffff;
+        .subtext-title {
+            font-size: 18px;
+            font-weight: normal;
+            color: lightgray;
+            margin-top: 10px;
+        }
+        .link {
+            color: mediumpurple;
+            text-decoration: none;
+            display: block;
+            text-align: center;
+            font-weight: 900;
+            width: 100%;
+        }
+        .box {
+            background-color: #2a2a2a;
+            padding: 20px;
+            border-radius: 10px;
+            border: 2px solid #444;
+            width: 80%;
+            max-width: 400px;
+            margin: 20px auto 0 auto;
+            text-align: center;
+        }
+        .footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #33194d;
+            font-size: 14px;
+        }
+        .footer2 {
+            text-align: center;
+            padding: 10px;
+            background-color: #261339;
+            font-size: 14px;
         }
         input[type="text"] {
-            width: 75%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #555555;
-            border-radius: 8px;
-            background-color: #333333;
-            color: #ffffff;
+            background-color: #2a2a2a;
+            color: white;
+            border: 2px solid #444;
+            padding: 5px 10px;
+            border-radius: 10px;
+            width: 300px;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .button-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 20px;
         }
         button {
-            background-color: #007BFF;
+            background-color: mediumpurple;
             color: white;
-            padding: 10px 20px;
-            margin: 10px 5px;
             border: none;
-            border-radius: 4px;
+            padding: 5px 10px;
+            border-radius: 10px;
             cursor: pointer;
-            font-size: 16px;
-        }
-        button:hover {
-            background-color: #0056b3;
         }
         .toggle-container {
-            margin: 10px 0;
+            margin-top: 20px;
             display: flex;
             justify-content: center;
             align-items: center;
+            gap: 20px;
         }
         .toggle-container label {
-            font-size: 16px;
-            margin: 0 10px;
+            font-size: 14px;
+            margin: 0;
         }
         .switch {
             position: relative;
             display: inline-block;
-            width: 50px;
-            height: 25px;
+            width: 40px;
+            height: 20px;
         }
         .switch input {
             opacity: 0;
@@ -86,8 +126,8 @@
         .slider:before {
             position: absolute;
             content: "";
-            height: 19px;
-            width: 19px;
+            height: 14px;
+            width: 14px;
             left: 3px;
             bottom: 3px;
             background-color: white;
@@ -95,10 +135,10 @@
             border-radius: 50%;
         }
         input:checked + .slider {
-            background-color: #007BFF;
+            background-color: mediumpurple;
         }
         input:checked + .slider:before {
-            transform: translateX(24px);
+            transform: translateX(20px);
         }
     </style>
     <script>
@@ -180,13 +220,18 @@
     </script>
 </head>
 <body>
-    <div class="container">
-        <h1>Radar Viewer</h1>
+    <div class="title-container">
+        Radar Viewer
+        <div class="subtext-title">
+            A simple HTML viewer for NWS radars.
+        </div>
+    </div>
+    <div class="box">
         <input type="text" id="radarName" name="radarName" placeholder="Enter Radar ID">
-        <br>
-        <button onclick="openRadar('reflectivity')">Open Reflectivity</button>
-        <button onclick="openRadar('velocity')">Open Velocity</button>
-        <br>
+        <div class="button-container">
+            <button onclick="openRadar('reflectivity')">Open Reflectivity</button>
+            <button onclick="openRadar('velocity')">Open Velocity</button>
+        </div>
         <div class="toggle-container">
             <label for="loopToggle">Loop</label>
             <label class="switch">
