--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
             border-radius: 10px;
             cursor: pointer;
         }
+        button:hover {
+            background-color: #6a0dad;
+        }
         .toggle-container {
             margin-top: 20px;
             display: flex;
