--- a/index.html
+++ b/index.html
@@ -1,251 +1,278 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radar Viewer</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-    <link rel="icon" href="https://raw.githubusercontent.com/microsoft/fluentui-emoji/refs/heads/main/assets/Deciduous%20tree/3D/deciduous_tree_3d.png">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #121212;
-            color: #ffffff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            justify-content: flex-start;
-            height: 100vh;
-            margin: 0;
-            user-select: none;
-        }
-        .title-container {
-            text-align: center;
-            padding: 40px;
-            background-color: #1e1e1e;
-            font-size: 28px;
-            font-weight: bold;
-            width: 100%;
-            box-sizing: border-box;
-        }
-        .subtext-title {
-            font-size: 18px;
-            font-weight: normal;
-            color: lightgray;
-            margin-top: 10px;
-        }
-        .link {
-            color: mediumpurple;
-            text-decoration: none;
-            display: block;
-            text-align: center;
-            font-weight: 900;
-            width: 100%;
-        }
-        .box {
-            background-color: #2a2a2a;
-            padding: 20px;
-            border-radius: 10px;
-            border: 2px solid #444;
-            width: 80%;
-            max-width: 400px;
-            margin: 20px auto 0 auto;
-            text-align: center;
-        }
-        .footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #33194d;
-            font-size: 14px;
-        }
-        .footer2 {
-            text-align: center;
-            padding: 10px;
-            background-color: #261339;
-            font-size: 14px;
-        }
-        input[type="text"] {
-            background-color: #2a2a2a;
-            color: white;
-            border: 2px solid #444;
-            padding: 5px 10px;
-            border-radius: 10px;
-            width: 300px;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .button-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-        button {
-            background-color: mediumpurple;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 10px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #6a0dad;
-        }
-        .toggle-container {
-            margin-top: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
-        }
-        .toggle-container label {
-            font-size: 14px;
-            margin: 0;
-        }
-        .switch {
-            position: relative;
-            display: inline-block;
-            width: 40px;
-            height: 20px;
-        }
-        .switch input {
-            opacity: 0;
-            width: 0;
-            height: 0;
-        }
-        .slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: #ccc;
-            transition: .4s;
-            border-radius: 34px;
-        }
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 14px;
-            width: 14px;
-            left: 3px;
-            bottom: 3px;
-            background-color: white;
-            transition: .4s;
-            border-radius: 50%;
-        }
-        input:checked + .slider {
-            background-color: mediumpurple;
-        }
-        input:checked + .slider:before {
-            transform: translateX(20px);
-        }
-    </style>
-    <script>
-        function openRadar(type) {
-            const radarName = document.getElementById('radarName').value;
-            const loop = document.getElementById('loopToggle').checked ? 'loop' : '0';
-            const isFull = document.getElementById('fullToggle').checked;
-            const animating = document.getElementById('loopToggle').checked;
-            let url = '';
-            
-            if (isFull) {
-                const layer = type === 'velocity' ? 'sr_bvel' : 'sr_bref';
-                const settings = btoa(JSON.stringify({
-                    "agenda": {
-                        "id": "local",
-                        "location": null,
-                        "zoom": 7,
-                        "filter": null,
-                        "layer": layer,
-                        "station": radarName
-                    },
-                    "animating": animating,
-                    "base": "standard",
-                    "artcc": false,
-                    "county": false,
-                    "cwa": false,
-                    "rfc": false,
-                    "state": false,
-                    "menu": true,
-                    "shortFusedOnly": true,
-                    "opacity": {
-                        "alerts": 0.8,
-                        "local": 0.6,
-                        "localStations": 0.8,
-                        "national": 0.6
-                    }
-                }));
-                url = `https://radar.weather.gov/?settings=v1_${settings}`;
-            } else {
-                if (type === 'reflectivity') {
-                    url = `https://radar.weather.gov/ridge/standard/${radarName}_${loop}.gif`;
-                } else if (type === 'velocity') {
-                    url = `https://radar.weather.gov/ridge/standard/base_velocity/${radarName}_${loop}.gif`;
-                }
-            }
-            window.open(url, '_blank');
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Radar Viewer</title>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+  <link rel="icon"
+    href="https://raw.githubusercontent.com/microsoft/fluentui-emoji/refs/heads/main/assets/Deciduous%20tree/3D/deciduous_tree_3d.png">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #121212;
+      color: #ffffff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      justify-content: flex-start;
+      height: 100vh;
+      margin: 0;
+      user-select: none;
+    }
 
-        function getQueryParams() {
-            const params = {};
-            const queryString = window.location.search.substring(1);
-            const queries = queryString.split("&");
-            queries.forEach(query => {
-                const [key, value] = query.split("=");
-                params[key] = decodeURIComponent(value);
-            });
-            return params;
-        }
+    .title-container {
+      text-align: center;
+      padding: 40px;
+      background-color: #1e1e1e;
+      font-size: 28px;
+      font-weight: bold;
+      width: 100%;
+      box-sizing: border-box;
+    }
 
-        function setRadarFromParams() {
-            const params = getQueryParams();
-            if (params.radar) {
-                document.getElementById('radarName').value = params.radar;
-            }
-            if (params.loop) {
-                document.getElementById('loopToggle').checked = params.loop === 'true';
-            }
-            if (params.full) {
-                document.getElementById('fullToggle').checked = params.full === 'true';
-            }
-            if (params.layer) {
-                openRadar(params.layer);
-            } else if (params.radar) {
-                openRadar('reflectivity');
-            }
-        }
+    .subtext-title {
+      font-size: 18px;
+      font-weight: normal;
+      color: lightgray;
+      margin-top: 10px;
+    }
 
-        document.addEventListener('DOMContentLoaded', setRadarFromParams);
-    </script>
+    .link {
+      color: mediumpurple;
+      text-decoration: none;
+      display: block;
+      text-align: center;
+      font-weight: 900;
+      width: 100%;
+    }
+
+    .box {
+      background-color: #2a2a2a;
+      padding: 20px;
+      border-radius: 10px;
+      border: 2px solid #444;
+      width: 80%;
+      max-width: 400px;
+      margin: 20px auto 0 auto;
+      text-align: center;
+    }
+
+    .footer {
+      text-align: center;
+      padding: 10px;
+      background-color: #33194d;
+      font-size: 14px;
+    }
+
+    .footer2 {
+      text-align: center;
+      padding: 10px;
+      background-color: #261339;
+      font-size: 14px;
+    }
+
+    input[type="text"] {
+      background-color: #2a2a2a;
+      color: white;
+      border: 2px solid #444;
+      padding: 5px 10px;
+      border-radius: 10px;
+      width: 300px;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .button-container {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 20px;
+    }
+
+    button {
+      background-color: mediumpurple;
+      color: white;
+      border: none;
+      padding: 5px 10px;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #6a0dad;
+    }
+
+    .toggle-container {
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .toggle-container label {
+      font-size: 14px;
+      margin: 0;
+    }
+
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 40px;
+      height: 20px;
+    }
+
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      transition: .4s;
+      border-radius: 34px;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 14px;
+      width: 14px;
+      left: 3px;
+      bottom: 3px;
+      background-color: white;
+      transition: .4s;
+      border-radius: 50%;
+    }
+
+    input:checked+.slider {
+      background-color: mediumpurple;
+    }
+
+    input:checked+.slider:before {
+      transform: translateX(20px);
+    }
+  </style>
+  <script>
+    function openRadar(type) {
+      const radarNames = document.getElementById('radarName').value.split(',');
+      const loop = document.getElementById('loopToggle').checked ? 'loop' : '0';
+      const isFull = document.getElementById('fullToggle').checked;
+      const animating = document.getElementById('loopToggle').checked;
+
+      radarNames.forEach(radarName => {
+        radarName = radarName.trim();
+        let url = '';
+
+        if (isFull) {
+          const layer = type === 'velocity' ? 'sr_bvel' : 'sr_bref';
+          const settings = btoa(JSON.stringify({
+            "agenda": {
+              "id": "local",
+              "location": null,
+              "zoom": 7,
+              "filter": null,
+              "layer": layer,
+              "station": radarName
+            },
+            "animating": animating,
+            "base": "standard",
+            "artcc": false,
+            "county": false,
+            "cwa": false,
+            "rfc": false,
+            "state": false,
+            "menu": true,
+            "shortFusedOnly": true,
+            "opacity": {
+              "alerts": 0.8,
+              "local": 0.6,
+              "localStations": 0.8,
+              "national": 0.6
+            }
+          }));
+          url = `https://radar.weather.gov/?settings=v1_${settings}`;
+        } else {
+          if (type === 'reflectivity') {
+            url = `https://radar.weather.gov/ridge/standard/${radarName}_${loop}.gif`;
+          } else if (type === 'velocity') {
+            url = `https://radar.weather.gov/ridge/standard/base_velocity/${radarName}_${loop}.gif`;
+          }
+        }
+        window.open(url, '_blank');
+      });
+    }
+
+    function getQueryParams() {
+      const params = {};
+      const queryString = window.location.search.substring(1);
+      const queries = queryString.split("&");
+      queries.forEach(query => {
+        const [key, value] = query.split("=");
+        params[key] = decodeURIComponent(value);
+      });
+      return params;
+    }
+
+    function setRadarFromParams() {
+      const params = getQueryParams();
+      if (params.radar) {
+        document.getElementById('radarName').value = params.radar;
+      }
+      if (params.loop) {
+        document.getElementById('loopToggle').checked = params.loop === 'true';
+      }
+      if (params.full) {
+        document.getElementById('fullToggle').checked = params.full === 'true';
+      }
+      if (params.layer) {
+        openRadar(params.layer);
+      } else if (params.radar) {
+        openRadar('reflectivity');
+      }
+    }
+
+    document.addEventListener('DOMContentLoaded', setRadarFromParams);
+  </script>
 </head>
+
 <body>
-    <div class="title-container">
-        Radar Viewer
-        <div class="subtext-title">
-            A simple HTML viewer for NWS radars.
-        </div>
+  <div class="title-container">
+    Radar Viewer
+    <div class="subtext-title">
+      A simple HTML viewer for NWS radars.
     </div>
-    <div class="box">
-        <input type="text" id="radarName" name="radarName" placeholder="Enter Radar ID">
-        <div class="button-container">
-            <button onclick="openRadar('reflectivity')">Open Reflectivity</button>
-            <button onclick="openRadar('velocity')">Open Velocity</button>
-        </div>
-        <div class="toggle-container">
-            <label for="loopToggle">Loop</label>
-            <label class="switch">
-                <input type="checkbox" id="loopToggle" name="loopToggle" checked>
-                <span class="slider"></span>
-            </label>
-            <label class="switch">
-                <input type="checkbox" id="fullToggle" name="fullToggle" checked>
-                <span class="slider"></span>
-            </label>
-            <label for="fullToggle">Full</label>
-        </div>
+  </div>
+  <div class="box">
+    <input type="text" id="radarName" name="radarName" placeholder="Enter Radar ID">
+    <div class="button-container">
+      <button onclick="openRadar('reflectivity')">Open Reflectivity</button>
+      <button onclick="openRadar('velocity')">Open Velocity</button>
     </div>
+    <div class="toggle-container">
+      <label for="loopToggle">Loop</label>
+      <label class="switch">
+        <input type="checkbox" id="loopToggle" name="loopToggle" checked>
+        <span class="slider"></span>
+      </label>
+      <label class="switch">
+        <input type="checkbox" id="fullToggle" name="fullToggle" checked>
+        <span class="slider"></span>
+      </label>
+      <label for="fullToggle">Full</label>
+    </div>
+  </div>
 </body>
+
 </html>
