--- a/simple.html
+++ b/simple.html
@@ -130,6 +130,11 @@
 
           radarImage.onload = () => {
             radarImage.style.display = "block";
+            setInterval(() => {
+              if (radarImage.style.display === "block") {
+                radarImage.src = imageUrl + "?" + new Date().getTime();
+              }
+            }, 120000);
           };
           radarImage.onerror = () => {
             alert(
