--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     </div>
   </div>
   <div class="box">
-    <input type="text" id="radarName" name="radarName" placeholder="Enter Radar ID">
+    <input type="text" id="radarName" name="radarName" placeholder="Enter Radar ID" autocomplete="off">
     <div class="button-container">
       <button onclick="openRadar('reflectivity')">Open Reflectivity</button>
       <button onclick="openRadar('velocity')">Open Velocity</button>
