--- a/toggle.html
+++ b/toggle.html
@@ -93,6 +93,7 @@
           id="radarId"
           placeholder="Enter Radar ID"
           onkeydown="handleKeyDown(event)"
+          autocomplete="off"
         />
         <button onclick="showRadar()">Show Radar</button>
       </div>
