--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
     </div>
     <div class="box">
         <div class="button-container">
-            <button onclick="window.location.href='../main'">Radar Viewer</button>
-            <button onclick="window.location.href='../toggle'">Radar Viewer Toggle</button>
-            <button onclick="window.location.href='../text'">Radar Viewer Text</button>
+            <button onclick="window.location.href='./main'">Radar Viewer</button>
+            <button onclick="window.location.href='./toggle'">Radar Viewer Toggle</button>
+            <button onclick="window.location.href='./text'">Radar Viewer Text</button>
         </div>
     </div>
 </body>
