--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 <body>
     <div class="title-container">
-        Radar VIewer
+        Radar Viewer
         <div class="subtext-title">
             A simple HTML viewer for NWS radars.
         </div>
