--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radar Viewer</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-    <link rel="icon"
-        href="https://raw.githubusercontent.com/microsoft/fluentui-emoji/refs/heads/main/assets/Deciduous%20tree/3D/deciduous_tree_3d.png">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/microsoft/fluentui-emoji/refs/heads/main/assets/Deciduous%20tree/3D/deciduous_tree_3d.png">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -20,82 +18,52 @@
             justify-content: flex-start;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
             user-select: none;
         }
-
         .title-container {
             text-align: center;
             padding: 40px;
             background-color: #1e1e1e;
+            margin-bottom: 10px;
             font-size: 28px;
             font-weight: bold;
             width: 100%;
             box-sizing: border-box;
         }
-
         .subtext-title {
             font-size: 18px;
             font-weight: normal;
             color: lightgray;
             margin-top: 10px;
         }
-
-        .link {
-            color: mediumpurple;
-            text-decoration: none;
-            display: block;
-            text-align: center;
-            font-weight: 900;
-            width: 100%;
-        }
-
-        .box {
+        .container {
             background-color: #2a2a2a;
-            padding: 20px;
+            padding: 10px;
             border-radius: 10px;
             border: 2px solid #444;
-            width: 80%;
-            max-width: 400px;
-            margin: 20px auto 0 auto;
-            text-align: center;
+            margin: 10px;
         }
-
-        .footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #33194d;
-            font-size: 14px;
+        h1 {
+            font-size: 28px;
+            font-weight: bold;
+            color: mediumpurple;
         }
-
-        .footer2 {
-            text-align: center;
-            padding: 10px;
-            background-color: #261339;
-            font-size: 14px;
-        }
-
-        .button-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-        }
-
         button {
             background-color: mediumpurple;
+            margin: 10px;
             color: white;
             border: none;
             padding: 5px 10px;
             border-radius: 10px;
             cursor: pointer;
+            transition: background 0.5s ease;
         }
-        
         button:hover {
             background-color: #6a0dad;
         }
     </style>
 </head>
-
 <body>
     <div class="title-container">
         Radar Viewer
@@ -103,13 +71,10 @@
             A simple HTML viewer for NWS radars.
         </div>
     </div>
-    <div class="box">
-        <div class="button-container">
+    <div id="button-container" class="container">
             <button onclick="window.location.href='./main'">Radar Viewer</button>
             <button onclick="window.location.href='./toggle'">Radar Viewer Toggle</button>
             <button onclick="window.location.href='./text'">Radar Viewer Text</button>
-        </div>
     </div>
 </body>
-
 </html>
