--- a/main.html
+++ b/main.html
@@ -100,6 +100,7 @@
       padding: 5px 10px;
       border-radius: 10px;
       cursor: pointer;
+      transition: background 0.5s ease;
     }
 
     button:hover {
