--- a/toggle.html
+++ b/toggle.html
@@ -70,6 +70,7 @@
         padding: 5px 10px;
         border-radius: 10px;
         cursor: pointer;
+        transition: background 0.5s ease;
       }
       button:hover {
         background-color: #6a0dad;
