--- a/text.html
+++ b/text.html
@@ -5,16 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Radar Viewer</title>
     <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-    />
-    <link
       rel="icon"
       href="https://raw.githubusercontent.com/microsoft/fluentui-emoji/refs/heads/main/assets/Deciduous%20tree/3D/deciduous_tree_3d.png"
     />
     <style>
       body {
-        font-family: "Roboto", sans-serif;
+        font-family: sans-serif;
         background-color: #121212;
         color: #ffffff;
         text-align: center;
