--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     href="https://raw.githubusercontent.com/microsoft/fluentui-emoji/refs/heads/main/assets/Deciduous%20tree/3D/deciduous_tree_3d.png">
   <style>
     body {
-      font-family: 'Roboto', sans-serif;
+      font-family: sans-serif;
       background-color: #121212;
       color: #ffffff;
       display: flex;
